src-tauri/tests/snapshots/agent_stream_event_wire__wire_format_user_input_request_ask_user_question.snap
---
source: tests/agent_stream_event_wire.rs
expression: "to_value(AgentStreamEvent::UserInputRequest\n{\n    provider: \"claude\".into(), model_id: \"opus-1m\".into(), resolved_model:\n    \"claude-opus-4-20250514\".into(), session_id:\n    Some(\"provider-session-1\".into()), working_directory:\n    \"/tmp/grex\".into(), permission_mode: Some(\"default\".into()),\n    user_input_id: \"tool-1\".into(), source: \"Claude\".into(), message:\n    \"Claude is asking for your input.\".into(), payload:\n    json!({\n        \"kind\": \"ask-user-question\", \"questions\":\n        [{ \"question\": \"Pick one\", \"options\": [] }],\n    }),\n})"
---
kind: userInputRequest
message: Claude is asking for your input.
modelId: opus-1m
payload:
  kind: ask-user-question
  questions:
    - options: []
      question: Pick one
permissionMode: default
provider: claude
resolvedModel: claude-opus-4-20250514
sessionId: provider-session-1
source: Claude
userInputId: tool-1
workingDirectory: /tmp/grex
